test/Tests/VertexInput/InvalidVectorComponent.golden

test\Tests\VertexInput\InvalidVectorComponent.hs:57:5: error:
    * Vertex binding: cannot position vector of type V 4 Float
      at location 0 with component 2.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
57 |   = withStructInput @VertexInput @(Triangle List)

   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\VertexInput\InvalidVectorComponent.hs:57:5: error:
    * Vertex binding: cannot position vector of type V 4 Float
      at location 0 with component 2.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
57 |   = withStructInput @VertexInput @(Triangle List)

   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
